# libComputeGPS

./: .gitignore  Makefile  README.md  configure.ac  libComputeGPS.md
doc/: Compass-Star.odg
src/: CGPS_AdafruitConversion.c  CGPS_AdafruitConversion.h  CGPS_ApproxHeadingFromStartToArrival.c  CGPS_Heading.c  CGPS_Heading.h  Makefile  Makefile.am  libComputeGPS.c  libComputeGPS.h
tests/: Makefile  Makefile.am  check_ComputeGPS.c  check_adafruit.c  check_adafruit_conversion.c  check_heading.c  check_heading_approxHeadingFromStartToArrival.c  test.h  tests.c
