## Process this file with automake to produce Makefile.in

TESTS = check_ComputeGPS
check_PROGRAMS = check_ComputeGPS
check_ComputeGPS_SOURCES = check_ComputeGPS.c $(top_builddir)/src/libComputeGPS.h
check_ComputeGPS_CFLAGS = @CHECK_CFLAGS@
check_ComputeGPS_LDADD = $(top_builddir)/src/libComputeGPS.a @CHECK_LIBS@
